tests/sumo/basic/tls/NEMA/errors/1_ignore/output.sumo
Loading net-file from 'net.net.xml' ... done (6ms).
Loading additional-files from 'input_additional.add.xml' ... 
done (1ms).
Loading additional-files from 'input_additional2.add.xml' ... done (2ms).
Loading done.
Simulation version v1_12_0+0426-579bba2 started with time: 0.00
Simulation ended at time: 500.00
Reason: The final simulation step has been reached.
Performance: 
 Duration: 0.23s
 Real time factor: 2183.41
 UPS: 115096.069869
Vehicles: 
 Inserted: 422 (Loaded: 423)
 Running: 70
 Waiting: 1
Statistics (avg):
 RouteLength: 361.74
 Speed: 7.56
 Duration: 62.42
 WaitingTime: 25.80
 TimeLoss: 43.43
 DepartDelay: 0.93

